--- a/main.html
+++ b/main.html
@@ -6,10 +6,10 @@
 </head>
 
 <body>
-    <form>
+    <form  onclick="calculateMinCost(event)>
         <label for="rope-lengths">Enter rope lengths:</label>
         <input type="text" id="rope-lengths">
-        <button type="button" onclick="calculateMinCost()">Calculate</button>
+        <button type="button"">Calculate</button>
       </form>
       <div id="result"></div>
 
