--- a/main.html
+++ b/main.html
@@ -13,10 +13,8 @@
       </form>
       <div id="result"></div>
 
-<script>
-    type="text/javascript" src="./script.js"
+<script src="./script.js"></script>
 
-  </script>
   
 
 </body>
