--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 <body>
     <form  >
         <label for="rope-lengths">Enter rope lengths:</label>
-        <input type="text" id="rope-lengths">
+        <input type="text" id="#">
         <button type="button" onclick="calculateMinCost()">Calculate</button>
       </form>
       <div id="result"></div>
